31/3/2004:	v2.4.8
	- take out romanian install help text; not enough space

31/3/2004:	v2.4.7
	- swedish texts
	- added japanese texts
	- fixed html viewer to work with japanese (allow line
	  breaks at any place)
	- added hungarian, italian and french texts

29/3/2004:	v2.4.6
	- dutch help texts
	- slovene & romanian texts

28/3/2004:	v2.4.5
	- menu texts localized via 'translations.<locale>'
	- new boot graphics
	- added Home theme
	- fixed language setting (#37195)
	- pass lang info to yast (#35841)

22/3/2004:	v2.4.4
	- new boot graphics
	- fixed japanese locale name (#36487)
	- added spanish texts
	- added dutch & hungarian texts
	- localized driver update text

17/3/2004:	v2.4.3
	- new/updated czech texts
	- reworked themes Makefile

16/3/2004:	v2.4.2
	- added german translations

14/4/2004:	v2.4.1
	- created Changelog
	- lang menu build from 'languages' file
	- corrected help text (#35630)
	- added german & slovak translations